--- a/src/main/resources/templates/userTemplate/allContact.html
+++ b/src/main/resources/templates/userTemplate/allContact.html
@@ -22,60 +22,38 @@
 
                         <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
                             <div
-                                class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900">
-                                <div>
-                                    <button id="dropdownActionButton" data-dropdown-toggle="dropdownAction"
-                                        class="inline-flex items-center text-gray-500 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-3 py-1.5 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
-                                        type="button">
-                                        <span class="sr-only">Action button</span>
-                                        Action
-                                        <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true"
-                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                                stroke-width="2" d="m1 1 4 4 4-4" />
-                                        </svg>
-                                    </button>
-                                    <!-- Dropdown menu -->
-                                    <div id="dropdownAction"
-                                        class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
-                                        <ul class="py-1 text-sm text-gray-700 dark:text-gray-200"
-                                            aria-labelledby="dropdownActionButton">
-                                            <li>
-                                                <a href="#"
-                                                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Reward</a>
-                                            </li>
-                                            <li>
-                                                <a href="#"
-                                                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Promote</a>
-                                            </li>
-                                            <li>
-                                                <a href="#"
-                                                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Activate
-                                                    account</a>
-                                            </li>
-                                        </ul>
-                                        <div class="py-1">
-                                            <a href="#"
-                                                class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete
-                                                User</a>
+                                class="flex space-x-3 items-center justify-start flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900">
+                                
+                    
+                                    <div>
+                                    <select  id="countries_disabled"
+                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                                        <option selected>Select Field</option>
+                                        <option value="Name">Name</option>
+                                        <option value="Email">Email</option>
+                                        <option value="Phone">Phone </option>
+                                    </select>
+                                </div>
+                                    <label for="table-search" class="sr-only">Search</label>
+                                    <div class="relative">
+                                        <div
+                                            class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
+                                            <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
+                                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                                                <path stroke="currentColor" stroke-linecap="round"
+                                                    stroke-linejoin="round" stroke-width="2"
+                                                    d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                                            </svg>
                                         </div>
+                                        <input type="text" id="table-search-users"
+                                            class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                            placeholder="Search for users">
                                     </div>
+                                    <button class="px-3 py-2 bg-gray-800 text-white rounded-md"> Search </button>
                                 </div>
-                                <label for="table-search" class="sr-only">Search</label>
-                                <div class="relative">
-                                    <div
-                                        class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
-                                        <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
-                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                                stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
-                                        </svg>
-                                    </div>
-                                    <input type="text" id="table-search-users"
-                                        class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                        placeholder="Search for users">
-                                </div>
-                            </div>
+                            
+
+                            <!-- Table logic is here of all contacts page  -->
                             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
                                 <thead
                                     class="text-xs justify-center text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
@@ -91,23 +69,28 @@
                                             Address
                                         </th>
                                         <th scope="col" class="px-6 py-3">
-                                            Linkedin
+                                            Links
                                         </th>
                                         <th scope="col" class="px-6 py-3">
                                             Website
                                         </th>
 
+                                        <th scope="col" class="px-6 py-3">
+                                            Action
+                                        </th>
+
+
 
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr data-th-each="c : ${contacts}"
+                                    <tr data-th-each="c : ${pageContact.content}"
                                         class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
 
-                                        <th onerror= "this.src = 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwVLdSDmgrZN7TkzbHJb8dD0_7ASUQuERL2A&s'"
-                                        scope="row"
+                                        <th scope="row"
                                             class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white">
-                                            <img class="w-10 h-10 rounded-full" data-th-src="${c.pictures}"
+                                            <img onerror="this.src = 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwVLdSDmgrZN7TkzbHJb8dD0_7ASUQuERL2A&s'"
+                                                class="w-10 h-10 rounded-full" data-th-src="${c.pictures}"
                                                 alt="contact image">
                                             <div class="ps-3">
                                                 <!-- this is name feild  -->
@@ -118,31 +101,62 @@
                                             </div>
                                         </th>
                                         <!--  this is position  -->
-                                        <td th:text="${c.phoneNumber}" class="px-6 py-4">
-                                            React Developer
+                                        <td class="px-6 py-4">
+                                            <i class="fa-solid fa-phone"></i>
+                                            <span th:text="${c.phoneNumber}"></span>
+
                                         </td>
-                                        <td th:text="${c.address}" class="px-6 py-4">
-                                            <div class="flex items-center">
-                                                <div class="h-2.5 w-2.5 rounded-full bg-green-500 me-2"></div> Online
-                                            </div>
+                                        <td class="px-6 py-4">
+                                            <i class="fa-solid fa-address-book"></i>
+                                            <span th:text="${c.address}"></span>
                                         </td>
 
-                                        <td th:text="${c.Linkedin}" class="px-6 py-4">
-                                            <a href="#"
-                                                class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit
-                                                user</a>
+                                        <td class="px-6 py-4">
+                                            <i class="fa-brands fa-linkedin"></i>
+                                            <a th:href="@{*{c.Linkedin}}" target="_blank" class="mr-4"><span
+                                                    th:text="${c.Linkedin}"></span></a>
+
+                                        </td>
+                                        <td class="px-6 py-4">
+                                            <i class="fa-solid fa-earth-americas"></i>
+                                            <a th:href="@{*{c.Website}}" target="_blank" class="mr-4"><span
+                                                    th:text="${c.Website}"></span></a>
+
                                         </td>
 
-                                        <td th:text="${c.Website}" class="px-6 py-4">
-                                            <a href="#"
-                                                class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit
-                                                user</a>
-                                        </td>
+                                        <td class="px-6 py-4">
 
+                                            <a data-th-href="@{'/User/editContact'}" class="mr-4"><i
+                                                    class="fa-solid fa-pencil"></i></a>
+                                            <a data-th-href="@{'/User/editContact'}" class="ml-4 mr-4"><i
+                                                    class="fa-solid fa-trash"></i></a>
+                                        </td>
                                     </tr>
 
                                 </tbody>
                             </table>
+
+                            <!--  pagination logic is here  -->
+                            <div class="pagination container  flex justify-center mt-5 mb-5">
+                                <nav aria-label="Page navigation example">
+                                    <ul class="inline-flex -space-x-px text-base h-10">
+                                        <li data-th-unless="${pageContact.first}">
+                                            <a href="#"
+                                                class="flex items-center justify-center px-4 h-10 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Previous</a>
+                                        </li>
+                                        <li data-th-each="index : ${#numbers.sequence(0 , pageContact.totalPages)}">
+                                            <a data-th-href="@{'/User/AllContact?page='+${index}}"
+                                                class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"><span
+                                                    data-th-text="${index +1}"></span></a>
+                                        </li>
+
+                                        <li data-th-unless="${pageContact.last}">
+                                            <a href="#"
+                                                class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Next</a>
+                                        </li>
+                                    </ul>
+                                </nav>
+                            </div>
                         </div>
 
                     </div>
